# repl

./: .gitignore  Makefile  README.md  mcp_repl.py  pyproject.toml  pyproject.toml.pypi  test_repl.py  test_simple.py
hanzo_repl/: textual_repl.py  tool_executor.py
tests/: test_chat_integration.py
