[project]
name = "hanzo-repl"
version = "0.1.0"
description = "Interactive REPL for testing Hanzo MCP tools and AI integration"
authors = [
    {name = "Hanzo AI", email = "dev@hanzo.ai"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
keywords = ["repl", "mcp", "ai", "llm", "hanzo"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://hanzo.ai"
Documentation = "https://github.com/hanzoai/repl"
Repository = "https://github.com/hanzoai/repl"
Issues = "https://github.com/hanzoai/repl/issues"

dependencies = [
    "hanzo-mcp @ file:///${PROJECT_ROOT}/../mcp",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "asyncio>=3.4.3",
    "colorama>=0.4.6",
    "pygments>=2.17.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
hanzo-repl = "hanzo_repl.ipython_repl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true