[project]
name = "hanzo-repl"
version = "0.1.0"
description = "Interactive REPL for testing Hanzo MCP tools and AI integration"
authors = [
    {name = "Hanzo AI", email = "dev@hanzo.ai"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
keywords = ["repl", "mcp", "ai", "llm", "hanzo"]
requires-python = ">=3.12"
dependencies = [
    "hanzo-mcp @ file:///Users/z/work/hanzo/mcp",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "asyncio>=3.4.3",
    "colorama>=0.4.6",
    "pygments>=2.17.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "textual>=0.41.0",
    "textual-dev>=1.2.0",
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.11",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://hanzo.ai"
Documentation = "https://github.com/hanzoai/repl"
Repository = "https://github.com/hanzoai/repl"
Issues = "https://github.com/hanzoai/repl/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
hanzo-repl = "hanzo_repl.textual_repl:main"
hanzo-repl-ipython = "hanzo_repl.ipython_repl:main"
hanzo-repl-basic = "hanzo_repl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.metadata]
allow-direct-references = true